--- a/public/walletAddress.htm
+++ b/public/walletAddress.htm
@@ -2,12 +2,21 @@
 <title>Run js</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/frame.css" />
 
+<link rel="stylesheet" href="css/frame.css" />
 <link rel="stylesheet" href="css/walletAddress.css" />
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 <body>
+
+    <head>
+        <!-- WEB3.JS -->
+        <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
+        integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+        ></script>
+    </head>
 
 
 
@@ -15,23 +24,45 @@
     <div class=main-row>
         <div class=main-main>
 
-            <span id=text></span>
+            <span id=text-11 class=text></span>
+            <span id=text-12 class=text></span>
+            <button id=button-1 style='cursor:pointer;'>CONNECT</button>
 
-            <button id=onboard style='cursor:pointer;'>CONNECT</button>
+            <br />
 
+            <span id=text-21 class=text></span>
+            <span id=text-22 class=text></span>
+            <button id=button-2 style='cursor:pointer;'>SWITCH/ADD</button>
+
+            <br />
+
+            <span id=text-31 class=text></span>
+            <span id=text-32 class=text></span>
+            <button id=button-3 style='cursor:pointer;'>ACCOUNTS</button>
+
+            <br />
+
+            <span id=text-41 class=text></span>
+            <button id=button-4 style='cursor:pointer;'>CHAIN ID</button>
+
+
+            <!-- <button id=button-5 style='cursor:pointer;'>?</button> -->
         </div>
     </div>
 </div>
 
-<!-- <script src="./metamask-onboarding.bundle.js"></script> -->
+<!-- METAMASK JS ALTERNATIVE LINK -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.cjs.min.js"></script> -->
 
-<!-- <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script> -->
+<!-- WEB3 JS ALTERNATIVE LINK -->
+<!-- <script src="https://unpkg.com/web3@latest/dist/web3.min.js"></script> -->
 
-<script src="https://unpkg.com/web3@latest/dist/web3.min.js"></script>
-
-
+<!-- JQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+<!-- METAMASK.JS -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script> -->
+
 <script src="js/walletAddress.js" charset="utf-8"></script>
+
 </body>
