--- a/public/walletAddress.htm
+++ b/public/walletAddress.htm
@@ -9,6 +9,9 @@
 <body>
 
     <head>
+        <!-- WALLET CONNECT -->
+        <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
+
         <!-- WEB3.JS -->
         <script
         src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
@@ -16,6 +19,10 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
         ></script>
+
+        <!-- SOLANA - MAYBE A DIFFERENT LINK ? -->
+        <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+
     </head>
 
 
@@ -24,29 +31,61 @@
     <div class=main-row>
         <div class=main-main>
 
-            <span id=text-11 class=text></span>
-            <span id=text-12 class=text></span>
-            <button id=button-1 style='cursor:pointer;'>CONNECT</button>
+            <div class=column-1>
+
+
+            <button id=button-1 style='cursor:pointer;'>CONNECT METAMASK</button>
+            <span id=text-11 class=text>-</span>
+            <span id=text-12 class=text>-</span>
 
             <br />
 
-            <span id=text-21 class=text></span>
-            <span id=text-22 class=text></span>
-            <button id=button-2 style='cursor:pointer;'>SWITCH/ADD</button>
+            <button id=button-2 style='cursor:pointer;'>SWITCH TO BSC</button>
+            <button id=button-21 style='cursor:pointer;'>SWITCH TO ETH</button>
+
 
             <br />
 
-            <span id=text-31 class=text></span>
-            <span id=text-32 class=text></span>
             <button id=button-3 style='cursor:pointer;'>ACCOUNTS</button>
+            <span id=text-31 class=text>-</span>
+            <span id=text-32 class=text>-</span>
 
             <br />
 
-            <span id=text-41 class=text></span>
             <button id=button-4 style='cursor:pointer;'>CHAIN ID</button>
+            <span id=text-41 class=text>-</span>
+
+        </div>
+
+        <div class=column-2>
 
 
-            <!-- <button id=button-5 style='cursor:pointer;'>?</button> -->
+
+            <button id=button-5 style='cursor:pointer;'>CONNECT COINBASE</button>
+            <span id=text-51 class=text>-</span>
+
+            <br />
+
+            <button id=button-6 style='cursor:pointer;'>CONNECT MATH</button>
+            <span id=text-61 class=text>-</span>
+            <br />
+            <span id=text-71 class=text>-</span>
+            <br />
+            <button id=button-8 style='cursor:pointer;'>CONNECT BINANCE</button>
+            <span id=text-81 class=text>-</span>
+            <br />
+            <button id=button-9 style='cursor:pointer;'>CONNECT COIN98</button>
+            <span id=text-91 class=text>-</span>
+            <br />
+            <button id=button-10 style='cursor:pointer;'>CONNECT PHANTOM</button>
+            <span id=text-101 class=text>-</span>
+            <button id=button-11 style='cursor:pointer;'>DISCONNECT PHANTOM</button>
+            <br />
+            <span id=text-121 class=text>-</span>
+            <button id=button-12 style='cursor:pointer;'>WALLET CONNECT</button>
+
+        </div>
+
         </div>
     </div>
 </div>
