--- a/public/walletAddress.htm
+++ b/public/walletAddress.htm
@@ -9,6 +9,7 @@
 <body>
 
     <head>
+
         <!-- WALLET CONNECT -->
         <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
 
@@ -21,7 +22,8 @@
         ></script>
 
         <!-- SOLANA - MAYBE A DIFFERENT LINK ? -->
-        <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+        <!-- <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script> -->
+        <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 
     </head>
 
@@ -36,7 +38,6 @@
 
             <button id=button-1 style='cursor:pointer;'>CONNECT METAMASK</button>
             <span id=text-11 class=text>-</span>
-            <span id=text-12 class=text>-</span>
 
             <br />
 
@@ -54,6 +55,16 @@
 
             <button id=button-4 style='cursor:pointer;'>CHAIN ID</button>
             <span id=text-41 class=text>-</span>
+
+            <br />
+            <button id=button-12 style='cursor:pointer;'>WALLET CONNECT</button>
+            <span id=text-121 class=text>-</span>
+
+            <br />
+
+            <button id=button-13 style='cursor:pointer;'>GUARDA WALLET</button>
+            <span id=text-131 class=text>-</span>
+            <span id=text-132 class=text>-</span>
 
         </div>
 
@@ -80,9 +91,7 @@
             <button id=button-10 style='cursor:pointer;'>CONNECT PHANTOM</button>
             <span id=text-101 class=text>-</span>
             <button id=button-11 style='cursor:pointer;'>DISCONNECT PHANTOM</button>
-            <br />
-            <span id=text-121 class=text>-</span>
-            <button id=button-12 style='cursor:pointer;'>WALLET CONNECT</button>
+
 
         </div>
 
