--- a/public/walletAddressV2.htm
+++ b/public/walletAddressV2.htm
@@ -49,7 +49,7 @@
                         <br />
                         <button id=button-12 style='cursor:pointer;'>WALLET CONNECT</button>
                         <span id=text-121 class='text'>-</span>
-                        <button id=button-122 style='cursor:pointer;'>WALLET DISCONNECT</button>
+                        <!-- <button id=button-122 style='cursor:pointer;'>WALLET DISCONNECT</button> -->
                         <br />
                         <span>Watching for accounts changes</span>
                         <span id=text-01 class='text'>----</span>
