--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -97,6 +97,9 @@
                         <button id=button-et style='cursor:pointer;' class=button-et> ETERNL</button>
                         <span id=text-et class='text button-et'>-</span>
 
+                        <button id=button-flint style='cursor:pointer;' class=button-flint> FLINT</button>
+                        <span id=text-flint class='text button-flint'>-</span>
+
                         <button id=button-ty style='cursor:pointer;' class=button-ty> TYPHON</button>
                         <span id=text-ty class='text button-ty'>-</span>
 
@@ -127,6 +130,12 @@
 
                         <button id=button-dot style='cursor:pointer;' class=button-dot> UNKNOWN POLKADOT WALLET</button>
                         <span id=text-dot class='text button-dot'>-</span>
+
+
+                        <!-- TRON -->
+
+                        <button id=button-tron style='cursor:pointer;' class=button-tron> TRONLINK</button>
+                        <span id=text-tron class='text button-tron'>-</span>
 
 
                         <!-- MULTI CHAIN -->
