--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -47,6 +47,7 @@
                 <br />
                 <div class=initial>
                     <button id=main-connect>CONNECT</button>
+                    <!-- <button id=main-test>TEST</button> -->
                 </div>
 
                 <div class=row-div>
@@ -70,6 +71,8 @@
                         <button id=button-cb style='cursor:pointer;' class=button-cb> COINBASE</button>
                         <span id=text-cb class='text button-cb'>-</span>
 
+                        <button id=button-xdf style='cursor:pointer;' class=button-xdf> XDEFI</button>
+                        <span id=text-xdf class='text button-xdf'>-</span>
 
                         <!-- COSMOS -->
 
@@ -128,8 +131,8 @@
                         <button id=button-dot style='cursor:pointer;' class=button-dot> POLKADOT-JS</button>
                         <span id=text-dot class='text button-dot'>-</span>
 
-                        <button id=button-dot style='cursor:pointer;' class=button-dot> UNKNOWN POLKADOT WALLET</button>
-                        <span id=text-dot class='text button-dot'>-</span>
+                        <!-- <button id=button-dot style='cursor:pointer;' class=button-dot> UNKNOWN POLKADOT WALLET</button>
+                        <span id=text-dot class='text button-dot'>-</span> -->
 
 
                         <!-- TRON -->
