plug did not work algosigner check

--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -27,6 +27,9 @@
         <!-- SOLANA  -->
         <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 
+        <!-- DECODER FOR ICP ADDRESS -->
+        <!-- <script defer="" src="https://dl.dropboxusercontent.com/s/r55397ld512etib/EncoderDecoderTogether.min.js?dl=0" nomodule="" type="text/javascript"></script> -->
+
     </head>
 
 
@@ -85,8 +88,8 @@
 
                         <!-- TERRA -->
 
-                        <button id=button-ts style='cursor:pointer;' class=button-ts> TERRA STATION</button>
-                        <span id=text-ts class='text button-ts'>-</span>
+                        <!-- <button id=button-ts style='cursor:pointer;' class=button-ts> TERRA STATION</button>
+                        <span id=text-ts class='text button-ts'>-</span> -->
 
 
                         <!-- CARDANO -->
@@ -139,6 +142,19 @@
 
                         <button id=button-tron style='cursor:pointer;' class=button-tron> TRONLINK</button>
                         <span id=text-tron class='text button-tron'>-</span>
+
+
+                        <!-- ALGORAND -->
+
+                        <button id=button-algo style='cursor:pointer;' class=button-algo> ALGOSIGNER</button>
+                        <span id=text-algo class='text button-algo'>-</span>
+
+
+                        <!-- INTENER COMPUTER -->
+
+                        <!-- <button id=button-plug style='cursor:pointer;' class=button-plug>PLUG</button>
+                        <span id=text-plug class='text button-plug'>-</span> -->
+
 
 
                         <!-- MULTI CHAIN -->
