mina - auro wallet

--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -150,6 +150,13 @@
                         <span id=text-algo class='text button-algo'>-</span>
 
 
+
+                        <!-- MINA -->
+
+                        <button id=button-mina style='cursor:pointer;' class=button-mina> AURO</button>
+                        <span id=text-mina class='text button-mina'>-</span>
+
+
                         <!-- INTENER COMPUTER -->
 
                         <!-- <button id=button-plug style='cursor:pointer;' class=button-plug>PLUG</button>
