--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -157,6 +157,12 @@
                         <span id=text-mina class='text button-mina'>-</span>
 
 
+                        <!-- KARDIA CHAIN -->
+
+                        <button id=button-kardia style='cursor:pointer;' class=button-kardia>KARDIA</button>
+                        <span id=text-kardia class='text button-kardia'>-</span>
+
+
                         <!-- INTENER COMPUTER -->
 
                         <!-- <button id=button-plug style='cursor:pointer;' class=button-plug>PLUG</button>
@@ -188,6 +194,8 @@
                         <span id=text-c98-6 class='text button-c98 chain-text'></span>
                         <span id=text-c98-7 class='text button-c98'></span>
                         <span id=text-c98-8 class='text button-c98 chain-text'></span>
+                        <span id=text-c98-9 class='text button-c98'></span>
+                        <span id=text-c98-10 class='text button-c98 chain-text'></span>
 
                         <div class=text-mobile-separator >
                             MOBILE AND DESKTOP WALLETS
