--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -173,9 +173,16 @@
                         <!-- MULTI CHAIN -->
 
                         <!-- CLOVER -->
-                        <!-- DOT / ETH / TRON / KDA -->
+                        <!-- DOT / ETH / SOL / KDA -->
                         <button id=button-cl style='cursor:pointer;' class=button-cl>CLOVER</button>
-                        <span id=text-cl class='text button-cl'>-</span>
+                        <span id=text-cl-1 class='text button-cl'>-</span>
+                        <span id=text-cl-2 class='text button-cl chain-text'>-</span>
+                        <span id=text-cl-3 class='text button-cl'>-</span>
+                        <span id=text-cl-4 class='text button-cl chain-text'>-</span>
+                        <span id=text-cl-5 class='text button-cl'>-</span>
+                        <span id=text-cl-6 class='text button-cl chain-text'>-</span>
+                        <span id=text-cl-7 class='text button-cl'>-</span>
+                        <span id=text-cl-8 class='text button-cl chain-text'>-</span>
 
                         <!-- MATH -->
                         <!-- ETH / SOL / DOT / COSMOS / TRON -->
@@ -187,7 +194,7 @@
                         <!--  ETH / SOL / KARDIA / AVAX / RONIN / RONIN-->
                         <button id=button-c98 style='cursor:pointer;' class=button-c98> COIN98</button>
                         <span id=text-c98-1 class='text button-c98'>-</span>
-                        <span id=text-c98-2 class='text button-c98 chain-text'>-</span>
+                        <span id=text-c98-2 class='text button-c98 chain-text'></span>
                         <span id=text-c98-3 class='text button-c98'></span>
                         <span id=text-c98-4 class='text button-c98 chain-text'></span>
                         <span id=text-c98-5 class='text button-c98'></span>
