wallet connect extra

--- a/public/walletAddressV4.htm
+++ b/public/walletAddressV4.htm
@@ -36,7 +36,7 @@
     <div class=debug-detection style='position:absolute; left:10px; top:10px; font-size:18px;'>
         <span style='color:green; font-weight:800;'>Detected Wallets</span>
         <span id=text-detected class='text'></span>
-        
+
         <span style='color:red; font-weight:800;'>Undetected Wallets</span>
         <span id=text-undetected class='text'></span>
     </div>
@@ -204,19 +204,64 @@
                         <span id=text-c98-10 class='text button-c98 chain-text'></span>
 
                         <div class=text-mobile-separator >
-                            MOBILE AND DESKTOP WALLETS
+                            MOBILE WALLETS via Wallet Connect
                         </div>
 
                         <!-- DESKTOP & MOBILE -->
-                        <button id=button-wc style='cursor:pointer;'>WALLET CONNECT </button>
-                        <span id=text-wc1 class='text'>-</span>
-                        <span id=text-wc2 class='text chain-text'>-</span>
 
+                        <!-- RAINBOW -->
+                        <button id=button-wc-rainbow style='cursor:pointer;'>RAINBOW </button>
+                        <span id=text-wc-rainbow-1 class='text'>-</span>
+                        <span id=text-wc-rainbow-2 class='text chain-text'>-</span>
+
+                        <!-- ARGENT -->
+                        <button id=button-wc-argent style='cursor:pointer;'>ARGENT </button>
+                        <span id=text-wc-argent-1 class='text'>-</span>
+                        <span id=text-wc-argent-2 class='text chain-text'>-</span>
+
+                        <!-- TRUST -->
+                        <button id=button-wc-trust style='cursor:pointer;'>TRUST </button>
+                        <span id=text-wc-trust-1 class='text'>-</span>
+                        <span id=text-wc-trust-2 class='text chain-text'>-</span>
+
+                        <!-- METAMASK -->
+                        <button id=button-wc-metamask style='cursor:pointer;'>METAMASK </button>
+                        <span id=text-wc-metamask-1 class='text'>-</span>
+                        <span id=text-wc-metamask-2 class='text chain-text'>-</span>
+
+                        <!-- MATH WALLET-->
+                        <button id=button-wc-mathWallet style='cursor:pointer;'>MATH WALLET</button>
+                        <span id=text-wc-mathWallet-1 class='text'>-</span>
+                        <span id=text-wc-mathWallet-2 class='text chain-text'>-</span>
+
+                        <!-- COINOMI WALLET-->
+                        <button id=button-wc-coinomi style='cursor:pointer;'>COINOMI WALLET</button>
+                        <span id=text-wc-coinomi-1 class='text'>-</span>
+                        <span id=text-wc-coinomi-2 class='text chain-text'>-</span>
+
+                        <!-- LEDGER WALLET-->
+                        <button id=button-wc-ledger style='cursor:pointer;'>LEDGER WALLET</button>
+                        <span id=text-wc-ledger-1 class='text'>-</span>
+                        <span id=text-wc-ledger-2 class='text chain-text'>-</span>
+
+                        <!-- COIN98 WALLET-->
+                        <button id=button-wc-coin98 style='cursor:pointer;'>COIN98 WALLET</button>
+                        <span id=text-wc-coin98-1 class='text'>-</span>
+                        <span id=text-wc-coin98-2 class='text chain-text'>-</span>
+
+
+                        <div class=text-mobile-separator >
+                            DESKTOP WALLETS via Wallet Connect
+                        </div>
+
+                        <button id=button-wc-desktop style='cursor:pointer;'>CONNECT</button>
+                        <span id=text-wc-desktop-1 class='text'>-</span>
+                        <span id=text-wc-desktop-2 class='text chain-text'>-</span>
 
                         <!-- OTHER -->
-                        <button id=button-13 style='cursor:pointer;'>CONNECT TORUS</button>
+                        <!-- <button id=button-13 style='cursor:pointer;'>CONNECT TORUS</button>
                         <span id=text-131 class='text'>-</span>
-                        <span id=text-132 class='text chain-text'>-</span>
+                        <span id=text-132 class='text chain-text'>-</span> -->
 
                     </div>
 
