--- a/public/newDesign.htm
+++ b/public/newDesign.htm
@@ -18,6 +18,20 @@
 
     <head>
 
+        <!-- WALLET CONNECT -->
+        <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
+
+        <!-- WEB3.JS -->
+        <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"
+        integrity="sha512-5erpERW8MxcHDF7Xea9eBQPiRtxbse70pFcaHJuOhdEBQeAxGQjUwgJbuBDWve+xP/u5IoJbKjyJk50qCnMD7A=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+        ></script>
+
+        <!-- SOLANA  -->
+        <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
+
         <!-- BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -26,16 +40,114 @@
 
 
     <!-- debug -->
-    <div class="debug-detection" style='position:absolute; right:10px; top:10px; font-size:13px;'>
+    <div class="debug-detection" style='position:absolute; text-align: right; right:10px; top:10px; font-size:13px;display:flex;flex-direction:column;'>
         <span style='color:green; font-weight:800;'>Detected Wallets</span>
         <span id=text-detected class='text'></span>
-        <span style='color:red; font-weight:800;'>Undetected Wallets</span>
+        <span style='color:red; font-weight:800; margin-top:40px;'>Undetected Wallets</span>
         <span id=text-undetected class='text'></span>
     </div>
 
 
+    <!-- <span id="wallet-container-wait">
+        <img src="images/wait.gif" class="wallet-wait" />
+    </span> -->
 
-    <div id="wallet-information-button-container">
+
+
+    <div id="wallet-information-button-container-desktop">
+
+        <div id="wallet-walletConnect-buttonList-container">
+
+            <div id="wallet-walletConnect-buttonList-background"></div>
+
+            <div id="wallet-qr-container"></div>
+
+            <div id="wallet-walletConnect-buttonList">
+
+                <div class='wallet-walletConnect-buttonList-helper-1'>
+
+                    <div class='wallet-walletConnect-buttonList-helper-2'>
+
+                        <div class='wallet-walletConnect-text-1'>
+                            Mobile Wallets
+                        </div>
+
+                        <button id="wallet-mobile-button-metamask" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-metamask">
+                                <img src="images/walletIcons/metamask.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-metamask" class="wallet-text">Metamask</span>
+
+                        </button>
+
+                        <button id="wallet-mobile-button-argent" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-argent">
+                                <img src="images/walletIcons/argent.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-argent" class="wallet-text">Argent</span>
+
+                        </button>
+
+                        <button id="wallet-mobile-button-trust" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-trust">
+                                <img src="images/walletIcons/trust.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-trust" class="wallet-text">Trust</span>
+
+                        </button>
+
+                        <button id="wallet-mobile-button-rainbow" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-rainbow">
+                                <img src="images/walletIcons/rainbow.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-rainbow" class="wallet-text">Rainbow</span>
+
+                        </button>
+
+                        <button id="wallet-mobile-button-coinomi" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-coinomi">
+                                <img src="images/walletIcons/coinomi.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-coinomi" class="wallet-text">Coinomi</span>
+
+                        </button>
+
+                        <button id="wallet-mobile-button-coin98" class="btn btn-lg btn-dark button-extra-3">
+
+                            <span id="wallet-mobile-icon-coin98">
+                                <img src="images/walletIcons/coin98.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-coin98" class="wallet-text">Coin98</span>
+
+                        </button>
+
+                        <hr />
+
+                        <button id="wallet-mobile-button-other" class="btn btn-lg btn-dark button-extra-4">
+
+                            <span id="wallet-mobile-icon-other">
+                                <img src="images/walletIcons/walletConnect.png" class="wallet-mobile-icon" />
+                            </span>
+                            <span id="wallet-mobile-text-other" class="wallet-text">Other</span>
+
+                        </button>
+
+                        <div class='wallet-walletConnect-text-2'>
+                            For desktop & other mobile wallets
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
         <div class="wallet-information-text">
             Browser extension wallets
@@ -43,35 +155,38 @@
 
         <div id="wallet-button-container">
 
+            <button id="wallet-button-detect" class="btn btn-lg btn-dark button-extra-5">
 
-
-        </div>
-
-        <div class="wallet-information-text">
-            Mobile and Desktop wallets
-        </div>
-
-        <div id="wallet-mobile-button-container">
-
-            <button id="wallet-button-mobile" class="btn btn-lg btn-dark button-extra">
-
-                <span id="wallet-icon-mobile">
-                    <img src="images/walletIcons/mobile.png" class="wallet-icon" />
+                <span id="wallet-icon-detect">
+                    <img src="images/walletIcons/detect.png" class="wallet-detect-icon" />
                 </span>
-                <span id="wallet-text-mobile" class="wallet-text">Mobile</span>
-
-            </button>
-
-            <button id="wallet-button-desktop" class="btn btn-lg btn-dark button-extra">
-
-                <span id="wallet-icon-desktop">
-                    <img src="images/walletIcons/desktop.png" class="wallet-icon" />
-                </span>
-                <span id="wallet-text-desktop" class="wallet-text">Desktop</span>
+                <span id="wallet-text-detect" class="wallet-text">Detect Wallets</span>
 
             </button>
 
         </div>
+
+        <div class="wallet-information-text-3">
+            Mobile and Desktop
+        </div>
+
+        <div id="wallet-walletConnect-button-container">
+
+            <button id="wallet-button-walletConnect" class="btn btn-lg btn-dark button-extra-2">
+
+                <span id="wallet-icon-walletConnect">
+                    <img src="images/walletIcons/walletConnect.png" class="wallet-icon" />
+                </span>
+                <span id="wallet-text-walletConnect" class="wallet-text">Wallet Connect</span>
+
+            </button>
+
+        </div>
+
+        <div id="wallet-information-text-2" class="wallet-information-text-2">
+
+        </div>
+
 
     </div>
 
