doing the soc integration here before the copy paste -shorten does not work (?) -should I have multiple accounts in multiple lines?

--- a/public/newDesign.htm
+++ b/public/newDesign.htm
@@ -49,10 +49,6 @@
     </div>
 
 
-    <!-- <span id="wallet-container-wait">
-        <img src="images/wait.gif" class="wallet-wait" />
-    </span> -->
-
 
 
     <div id="wallet-information-button-container-desktop">
@@ -231,6 +227,23 @@
 
     </div>
 
+    <div id="sent" style="margin-top:3%;padding-left:20%; padding-right:20%;">
+        <table class="table table-striped" style="max-height: 150px; overflow-y:scroll">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Blockchain</th>
+                    <th scope="col">Address</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+    <span class=table-coin-icon-container>
+        <img id="table-coin-icon" src=""/>
+        <img id="table-wallet-icon" src=""/>
+    </span>
 
     <script src="js/nodeWallet.js" charset="utf-8"></script>
 
