there is a bug with finding the address from the wallet object list and deleting it. Too tired to figure it out. Everything else appears to be working.

--- a/public/newDesign.htm
+++ b/public/newDesign.htm
@@ -234,6 +234,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Blockchain</th>
                     <th scope="col">Address</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody></tbody>
